# Multitarget-tracker-ROS

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp  package.xml
Detector/: SSDMobileNetDetector.cpp
Tracker/: Ctracker.h
config/: multitarget_tracker_params.yaml
launch/: multitarget_tracker_ros.launch
src/: VideoExample.h  abstract_target_tracker.h  multitarget_tracker_node.cpp
src/Tracker/: Ctracker.cpp
